fixed spacing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,9 @@ input[type="number"] {
 body {
   zoom: 80%;
 }
-
+.nav-container {
+  height: 86.5vh !important;
+}
 .main-container {
   padding: 0 2rem;
   width: 100%;
@@ -41,7 +43,7 @@ body {
 
 @media only screen and (max-width: 900px) {
   .nav-container {
-    height: 86.3% !important;
+    height: 86.5vh !important;
   }
   #budgetModal {
     width: 100vw !important;
